# SlimScribe

./: .gitignore  Cargo.toml  LICENSE  README.md  slimscribe.bat
src/: cli.rs  ffmpeg.rs  finder.rs  main.rs  progress.rs  whisper.rs
